<resources>
    <string name="app_name">"Know India - Religion &amp; Culture"</string>
    <string name="short_app_name">"Know India - Religion &amp; Culture"</string>
    <string name="devta_question_answer_string">
"1: Which god is worshipped first according to Hindu Mythology ?+
:Ganesh_2: Which gods are called Tridev ?+
: Brahma, Vishnu, Mahesh_3: Who is considered as the creator of the Universe according to Hindu Mythology ? +
:Brahma_4: Who is the Sustainer of the Universe ? +
:Vishnu_5: Which god is known as the destroyer of the Universe ? +
:Shiva_6: Which god is least worshipped among the Tridev ? +
:Brahma_7: Where is the only temple of Lord Brahma situated ? +
:Pushkar_8: By which name are the disciples of Vishnu known ?+
:Vaishnavites_9: By which name are the disciples of Shiva known ? +
:Shaivites_10: How many principal incarnations of Vishnu are known ? +
:Ten_11: In which form of incarnation did Vishnu save Bhagat Prahlad from Hiranyakashyiap ? +
:Narsingh_12: Which incarnation of Vishnu has pharasa as his weapon ? +
:Parshuram_13: Which god is also known as Neelkanth ? +
:Shiva_14: What is the name of Krishna’s mother who gave birth to him ?+
:Devaki_15: Which god is known as Giridhar ? +
:Krishna_16: Who is called the king of Hindu gods ? +
:Indra_17: Which god is called Sahasraksh ? +
:Indra_18: Who is the treasurer of Hindu gods ? +
:Kuber_19: Which diety is the ‘goddess of wealth and fortune’ according to Hindus ? +
:Lakshmi_20: Which place is known to be the origin of goddess Lakshmi ?+
:Ocean_21: Name the Hindu goddess of learning: +
:Saraswati_22: Name the Guru of gods: +
:Brihaspati_23: Which god has four faces ? +
:Brahma_24: Which god is known by the names Ashutosh, Rudra, Mahdev etc ? +
:Shiva_25: Which goddess is known as Shailja (Girija) ? +
:Parvati_26: Which god is known as Rudra ? +
:Shiva_27: Which god is known as Vinayak ? +
:Ganesh_28: What is the vehicle of Indra ? +
:Airavat_29: What is the Vehicle of Vishnu ? +
:Garud_30: What is the Vehicle of Shiva ? +
:Nandi_31: What is the Vehicle of Lakshmi ? +
:Owl_32: What is the Vehicle of Saraswati ? +
:Hans_33: What is the Vehicle of Ganesh ? +
:Mouse_34: What is the Vehicle of Kartikeya ? +
:Mayur_35: Whose Vehicle is Lion ? +
:Durga_36: What is the Vehicle of Yamraj ? +
:Buffalo_37: What is the Vehicle of Kamdev ? +
:Parrot_38: Which god is known as Ekdant ? +
:Ganesh_39: Whose weapon is Vajra ? +
:Indra_40: What material was used in making Vajra ?+
:Bones_41: Which is the first incarnation of Lord Vishnu ? +
:Matsya_42: By what name are the great Shiva devotees known in Tamil Literature ?+
:Nayanars_43: By what name are the great Vishnu devotees known in Tamil Literature ?+
:Alwars_44: Who are the two celesital Doctors (Vaidyas to devtas) born to Surya ? +
:Ashwani Kumars_45: What is the name of the Guru of Asurs (Demons) ? +
:Sukracharya_46: Who killed the demon Mahishasur ? +
:Durga_47: Name the architect among the gods ? +
:Vishwakarma_49: Which place is supposed to be the sleeping place of Lord Vishnu ? +
:Ksheer Sagar_50: Which place is supposed to be the residence of Lord Shiva ? +
:Kailash Parvat_52: Whose daughter is goddess Saraswati ? +
:Brahma_53: In which form is goddess Durga worshipped on the First day of Navratra Festival ? +
:Shailputri_54: In which form is goddess Durga worshipped on the Second day of Navratra Festival ? +
:Bhramcharini_55: In which form is goddess Durga worshipped on the Third day of Navratra Festival ? +
:Chandraghanta_56: In which form is goddess Durga worshipped on the Fourth day of Navratra Festival ? +
:Kushmanda_57: In which form is goddess Durga worshipped on the Fifth day of Navratra Festival ? +
:Skandmata_58: In which form is goddess Durga worshipped on the Sixth day of Navratra Festival ? +
:Katyayani_59: In which form is goddess Durga worshipped on the Seventh day of Navratra Festival ? +
:Kalratri_60: In which form is goddess Durga worshipped on the Eighth day of Navratra Festival ? +
:Mahagouri_61: In which form is goddess Durga worshipped on the Ninth day of Navratra Festival ? +
:Sidhidatri_62: Which goddess is worshipped on Deepawali festival ? +
:Laxmi Indra_63: Which god is responsible for rains according to Hindu mythology ? +
:Indra_64: Name the goddess who is also known as Veena Vadini, Sharda ? +
:Saraswati_65: Name the god who is also known as Vakratunda, Gajanan, Lambodar ? +
:Ganesh_66: Name the charioteer of the chariot of Sun ? +
:Arun_67: Name the dance performed by Lord Shiva to destroy the whole world ?+
:Tandav"
    </string>
    <string name="menu_1">Gods - Godesses</string>
    <string name="menu_2">From Religions</string>
    <string name="menu_3">From Ramayan</string>
    <string name="menu_4">From Mahabharat</string>
    <string name="menu_5">Religious Places</string>
    <string name="menu_6">Know Fine Arts</string>
    <string name="menu_7">Great Teachers - Disciples</string>
    <string name="banner_ad_unit_id">ca-app-pub-3832304107491440/3567709613</string>
</resources>