<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.hindustaniandroidapps.anuptiwari.bharatkojano.knowindia_goddessesandgods.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8.75">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/themeColor"
                android:id="@+id/aboutUs"
                android:padding="10dp"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:gravity="center">

                <TextView
                    android:id="@+id/aboutTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:background="@color/shareColor"
                    android:gravity="center"
                    android:textColor="@android:color/white"
                    android:textSize="17sp"
                    android:text="Hindustani Android Apps [+]"
                    android:padding="8dp"
                    android:layout_marginRight="8dp"
                    />
                <ImageButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:srcCompat="@android:drawable/ic_menu_share"
                    android:background="@color/shareColor"
                    android:padding="4dp"
                    android:id="@+id/imageButton2"
                    android:layout_weight="1"
                    android:onClick="shareApp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:padding="12dp"
                android:id="@+id/mahabharat_layout"
                android:layout_margin="@dimen/activity_horizontal_margin">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_marginLeft="4dp"
                    android:background="@color/mahabharatTheme"
                    android:padding="2dp"
                    android:gravity="center"
                    android:layout_marginRight="20dp"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:padding="6dp"
                    android:layout_weight="4"
                    android:gravity="center_vertical"
                    android:textSize="18sp"
                    android:text="@string/menu_4"
                    android:background="@android:color/white"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:padding="12dp"
                android:id="@+id/ramayan_layout"
                android:layout_margin="@dimen/activity_horizontal_margin">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_marginLeft="4dp"
                    android:background="@color/ramayanaTheme"
                    android:padding="2dp"
                    android:gravity="center"
                    android:layout_marginRight="20dp"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:padding="6dp"
                    android:layout_weight="4"
                    android:gravity="center_vertical"
                    android:textSize="18sp"
                    android:text="@string/menu_3"
                    android:background="@android:color/white"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:padding="12dp"
                android:id="@+id/devi_devta_layout"
                android:layout_margin="@dimen/activity_horizontal_margin">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_marginLeft="4dp"
                    android:background="@color/deviDevtaTheme"
                    android:padding="2dp"
                    android:gravity="center"
                    android:layout_marginRight="20dp"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:padding="6dp"
                    android:layout_weight="4"
                    android:gravity="center_vertical"
                    android:textSize="18sp"
                    android:text="@string/menu_1"
                    android:background="@android:color/white"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:padding="12dp"
                android:id="@+id/lalit_kala_layout"
                android:layout_margin="@dimen/activity_horizontal_margin">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_marginLeft="4dp"
                    android:background="@color/lalitKalaTheme"
                    android:padding="2dp"
                    android:gravity="center"
                    android:layout_marginRight="20dp"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:padding="6dp"
                    android:layout_weight="4"
                    android:gravity="center_vertical"
                    android:textSize="18sp"
                    android:text="@string/menu_6"
                    android:background="@android:color/white"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:padding="12dp"
                android:id="@+id/dharm_layout"
                android:layout_margin="@dimen/activity_horizontal_margin">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_marginLeft="4dp"
                    android:background="@color/dharmTheme"
                    android:padding="2dp"
                    android:gravity="center"
                    android:layout_marginRight="20dp"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:padding="6dp"
                    android:layout_weight="4"
                    android:gravity="center_vertical"
                    android:textSize="18sp"
                    android:text="@string/menu_2"
                    android:background="@android:color/white"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:padding="12dp"
                android:id="@+id/dharm_sthal_layout"
                android:layout_margin="@dimen/activity_horizontal_margin">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_marginLeft="4dp"
                    android:background="@color/dharmSthalTheme"
                    android:padding="2dp"
                    android:gravity="center"
                    android:layout_marginRight="20dp"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:padding="6dp"
                    android:layout_weight="4"
                    android:gravity="center_vertical"
                    android:textSize="18sp"
                    android:text="@string/menu_5"
                    android:background="@android:color/white"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:padding="12dp"
                android:id="@+id/mahan_layout"
                android:layout_margin="@dimen/activity_horizontal_margin">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_marginLeft="4dp"
                    android:background="@color/mahanGuruTheme"
                    android:padding="2dp"
                    android:gravity="center"
                    android:layout_marginRight="20dp"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:padding="6dp"
                    android:layout_weight="4"
                    android:gravity="center_vertical"
                    android:textSize="18sp"
                    android:text="@string/menu_7"
                    android:background="@android:color/white"
                    />

            </LinearLayout>


        </LinearLayout>

    </ScrollView>

    <LinearLayout
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@android:color/white"
        android:layout_weight="1.25">

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            ads:adSize="BANNER"
            ads:adUnitId="@string/banner_ad_unit_id">
        </com.google.android.gms.ads.AdView>

    </LinearLayout>

</LinearLayout>
